--- a/WeatherAPI/appsettings.json
+++ b/WeatherAPI/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ApiConfiguration": {
     "APIWeatherBaseAdress": "https://api.openweathermap.org/data/2.5/",
-    "Token": "41d68e4b4e31140c3493b24ad0bc410b"
+    "Token": "41d68e4b4e31140c3493b24ad0bc410b",
+    "SqlServerConnection": "Data Source=localhost;Initial Catalog=weatherapp.dev;Integrated Security=True;Pooling=False"
   }
 }
