--- a/WeatherAPI.Infra.Dapper/WeatherAPI.Infra.Dapper.csproj
+++ b/WeatherAPI.Infra.Dapper/WeatherAPI.Infra.Dapper.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WeatherAPI.Core\WeatherAPI.Core.csproj" />
+    <ProjectReference Include="..\WeatherAPI.Infra.Http\WeatherAPI.Infra.Http.csproj" />
+  </ItemGroup>
+
 </Project>
