--- a/WeatherAPI.Application/WeatherAPI.Application.csproj
+++ b/WeatherAPI.Application/WeatherAPI.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.3.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
